syntax = "proto3";

package pb; 

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "simple_bank/pb";

service SimpleBank{
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){}
  rpc RenewAccessToken (RenewAccessTokenRequest) returns (RenewAccessTokenResponse){}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
}